tdf#56266 sw xmloff: fix tracked deletions in insertions

RedlineSuccessorData export, i.e. tracked deletions
within tracked insertions were loaded as plain
tracked deletions during an ODF roundtrip. After that,
e.g. rejecting all changes couldn't reject the lost
tracked insertion, keeping the text of the tracked
deletion as part of the original text by mistake.

Regression from commit a9019e76812a947eb54cfa8d728c19361c929458
"INTEGRATION: CWS oasis (1.3.276); FILE MERGED
2004/05/12 11:00:37 mib 1.3.276.1: - #i20153#: changed <office:annotation> and <office:change-info>"

Note: RedlineSuccessorData is still stored in an extra
text:insertion within text:changed-region, only the
not ODF-compatible office:chg-author and office:chg-date-time
attributes were changed to dc:creator and dc:date elements
in RedlineSuccessorData export:

<text:changed-region>
  <text:deletion/>
  <text:insertion/>
</text:changed-region>

Because this structure still causes a bootstrap ODF validation
error in the odfexport and layout tests, check the export with
uitest. See also SetChangeInfo()/RedlineAdd().

Change-Id: Ic15c468172bd4d7ea1fd49d9b6610204f23d0036